--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.pavi.myfirstapp"
-        minSdkVersion 8
+        minSdkVersion 9
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -19,11 +19,13 @@ android {
     }
 }
 
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    //compile 'com.uber.sdk:rides-android:0.5.2'
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:design:23.3.0'
-    //compile 'com.uber.sdk:rides-android:0.5.2'
     compile 'com.neno0o.ubersdk:ubersdk:0.2'
+    compile 'com.google.android.gms:play-services:8.4.0'
 }
